# transition-checker

./: .gitignore  FILE-FORMATS.md  README.md  add_offerings.py  add_override.py  cfcc_summary.py  degree_rules.py  extract_plans.py  extract_template.py  import_erg.py  import_handbook.py  map_maker.py  map_steering_example.json  mapping checker.py  mapping_checker.py  offering_checker.py  plan_validate.py  pyproject.toml  report_generator.py  validate  validate.py
data/: CEICAH.json
rules/: CEICAH.json  CEICAH3707.json  CEICDH3707-2020-2025.json  CEICDH3707-2026-2029.json  CEICKS8338(RPL).json  CEICKS8338.json  FOODJH3061-2021-2026.json  FOODKH3061-2021-2026.json
src/transitionchecker/: __init__.py  erg_parser.py  planner_engine.py  prereq_engine.py  rules_engine.py
src/transitionchecker/cli/: __init__.py  add_offerings_cli.py  add_override_cli.py  cfcc_summary_cli.py  degree_rules_cli.py  extract_plans_cli.py  extract_template_cli.py  import_erg_cli.py  import_handbook_cli.py  map_maker_cli.py  mapping_checker_cli.py  offering_checker_cli.py  report_generator_cli.py  validate_cli.py
src/transitionchecker/core/: __init__.py  catalogue.py  course_utils.py  mapping_workbook.py  offerings.py  offerings_output.py  period_utils.py  plan_filtering.py  rules_loader.py  validation.py  validation_report_html.py
src/transitionchecker/utils/: __init__.py  logging.py
tests/: conftest.py  test_cli_add_offerings.py  test_cli_add_override.py  test_cli_cfcc_summary.py  test_cli_degree_rules.py  test_cli_extract_plans.py  test_cli_extract_template.py  test_cli_import_handbook.py  test_cli_map_maker.py  test_cli_mapping_checker.py  test_cli_offering_checker.py  test_cli_report_generator.py  test_cli_validate.py  test_core_rules_loader.py  test_course_utils.py  test_erg_expr_builder.py  test_erg_expr_evaluator.py  test_erg_parser.py  test_expression_evaluation.py  test_mapping_workbook.py  test_period_utils.py  test_plan_filtering.py  test_planner_engine_core.py  test_prerequisite_parsing.py  test_rules_engine.py  test_validation_utils.py
tests/data/: catalogue_prereq_fixture.json  offerings_simple.json  plan_for_subset_rules.json  plan_missing_prereq.json  plan_valid.json  prereq-snapshot-baseline.json  rules_simple.json  rules_with_subset_ids.json  rules_without_subset_ids.json
