[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "degreeplanner"
version = "0.5.0"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pandas",
    "openpyxl",
    "requests",
]

[tool.setuptools]
py-modules = [
    "add_offerings",
    "add_override",
    "degree_rules",
    "offering_checker",
    "extract_plans",
    "map_maker",
    "validate",
    "extract_template",
    "cfcc_summary",
    "import_handbook",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["transitionchecker*"]

[project.scripts]
add-offerings    = "transitionchecker.cli.add_offerings_cli:main"
add-override     = "transitionchecker.cli.add_override_cli:main"
degree-rules      = "transitionchecker.cli.degree_rules_cli:main"
offering-checker  = "transitionchecker.cli.offering_checker_cli:main"
extract-plans     = "transitionchecker.cli.extract_plans_cli:main"
map-maker         = "transitionchecker.cli.map_maker_cli:main"
plan-validate     = "transitionchecker.cli.validate_cli:main"
extract-template  = "transitionchecker.cli.extract_template_cli:main"
cfcc-summary      = "transitionchecker.cli.cfcc_summary_cli:main"
import-handbook   = "transitionchecker.cli.import_handbook_cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = [
    "src/transitionchecker",
    "tests",
    "*.py",
]

[[tool.mypy.overrides]]
module = ["pandas"]
ignore_missing_imports = true
